--- a/TIFactionEliminationMod/TIFactionEliminationMod.csproj
+++ b/TIFactionEliminationMod/TIFactionEliminationMod.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EBOF</RootNamespace>
-    <AssemblyName>EBOF</AssemblyName>
+    <AssemblyName>TIFactionEliminationMod</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
