Rename mod's internal namespace to match its new name

--- a/TIFactionEliminationMod/TIFactionEliminationMod.csproj
+++ b/TIFactionEliminationMod/TIFactionEliminationMod.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{91B7A999-8E9D-416F-949F-73AE3484F56B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EBOF</RootNamespace>
+    <RootNamespace>TIFactionEliminationMod</RootNamespace>
     <AssemblyName>TIFactionEliminationMod</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
