Update project file after a source file had been renamed

--- a/TIHumanFactionEliminationMod/TIHumanFactionEliminationMod.csproj
+++ b/TIHumanFactionEliminationMod/TIHumanFactionEliminationMod.csproj
@@ -87,7 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InfluenceCap.cs" />
+    <Compile Include="MarkFactionAsDead.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
